[tool.poetry]
name = "payments-bot"
version = "0.1.0"
description = ""
authors = ["Артём Тарасов <tarassanda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.0"
pydantic-settings = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
